force-app/src/objects/Evaluation_Team_Building__c.object
<CustomObject>
    <description>This object is used for regsitering and store information about the evaluation team building process.</description>
    <fields>
        <fullName>Accreditation_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accreditation Activity</label>
        <referenceTo>Engagement_Activity__c</referenceTo>
        <relationshipLabel>Evaluation Team Building</relationshipLabel>
        <relationshipName>Evaluation_Teams_Building</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Manager_needed__c</fullName>
        <description>0/1 (number, with only choices of 0 and 1)</description>
        <label>Business Manager needed?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Chair_selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>yes/no</description>
        <label>(Co) Chair selected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluator_positions_created_published__c</fullName>
        <description>Tick box</description>
        <formula>TEXT(Accreditation_Activity__r.Evaluator_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>evaluator status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluators_placed__c</fullName>
        <description>0</description>
        <formula>Accreditation_Activity__r.CIS_Evaluators_in_place__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluators placed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback_links_made_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick box</description>
        <label>Feedback links made &amp; sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_on_team_returned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick box</description>
        <label>Feedback on team returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gizmo_link_Co_Chair__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick box</description>
        <label>Gizmo link Co-/Chair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holding_email_to_Team_Members__c</fullName>
        <description>Number value (2 digit no decimal)</description>
        <label>Holding email to Team Members</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Evaluators_approved_by_school__c</fullName>
        <description>Number value (2 digit no decimal)</description>
        <label>Number of Evaluators approved by school</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prep_Materials_sent__c</fullName>
        <description>Number value (2 digit no decimal)</description>
        <label>Prep Materials sent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Evaluator_approval_from_school__c</fullName>
        <description>Number value (2 digit no decimal)</description>
        <label>Request Evaluator approval from school</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_feedback_from_TMs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick box</description>
        <label>Request feedback from TMs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resources_recap_chairs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick box</description>
        <label>Resources recap (chairs)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Team needed</fullName>
                    <default>true</default>
                    <label>Team needed</label>
                </value>
                <value>
                    <fullName>Team positions published</fullName>
                </value>
                <value>
                    <fullName>Team selection</fullName>
                </value>
                <value>
                    <fullName>Team confirmation</fullName>
                </value>
                <value>
                    <fullName>Essential resource sharing</fullName>
                </value>
                <value>
                    <fullName>Team Access</fullName>
                </value>
                <value>
                    <fullName>Team ready to go</fullName>
                </value>
                <value>
                    <fullName>Aftercare</fullName>
                </value>
                <value>
                    <fullName>Team closed out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Gizmo_sent__c</fullName>
        <description>Number value</description>
        <label>Survey Gizmo sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Complete__c</fullName>
        <formula>TEXT(Accreditation_Activity__r.Evaluator_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_List_shared_with_partner_agency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>yes/no</description>
        <label>Team List shared with partner agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Map_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick box</description>
        <label>Team Map Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick box</description>
        <label>Team Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_list_filled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>yes/no</description>
        <label>Team list filled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_list_received_from_partner_agency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>yes/no</description>
        <label>Team list received from partner agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_CIS_positions__c</fullName>
        <description>3</description>
        <formula>Accreditation_Activity__r.Total_CIS_Evaluators__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CIS positions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_f__c</fullName>
        <formula>(Evaluators_placed__c + Business_Manager_needed__c) / Total_CIS_positions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <description>Gets the Visit Type value from the Accreditation Activity via a formula.</description>
        <formula>text(Accreditation_Activity__r.Visit_type__c)</formula>
        <inlineHelpText>Gets the Visit Type value from the Accreditation Activity via a formula.</inlineHelpText>
        <label>Visit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_history_created__c</fullName>
        <formula>Accreditation_Activity__r.Create_Visit_History__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit history created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weave_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick box</description>
        <label>Weave Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weave_access_team__c</fullName>
        <description>Number value</description>
        <label>Weave access team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Evaluation Team Building</label>
    <nameField>
        <label>Evaluation Team Building Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evaluation Team Building</pluralLabel>
    <recordTypes>
        <fullName>Evaluation_Team_Building</fullName>
        <active>true</active>
        <description>Evaluation Team Building</description>
        <label>Evaluation Team Building</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Business_Manager_needed</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Business_Manager_needed__c   &gt;=   2 , true, false)</errorConditionFormula>
        <errorDisplayField>Business_Manager_needed__c</errorDisplayField>
        <errorMessage>Business Manager needed  can only be stored 0 or 1.</errorMessage>
    </validationRules>
</CustomObject>